Added submodule Foxworks

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ sysinfo.txt
 *.stackdump
 UserSettings/
 
+!**/*.meta
+
+#-----------------------------------------
+#-- Extra
+#-----------------------------------------
+Builds/
+Keystore/
+
 #-------------------
 #-- Lightmaps
 #-------------------
@@ -39,13 +47,9 @@ LightingData.asset.meta
 /*.vsconfig
 
 #-----------------------------------------
-#-- Visual Studio Code generated folders
+#-- IDE generated
 #-----------------------------------------
 .vscode*
-
-#-----------------------------------------
-#-- Rider plugin and generated folders
-#-----------------------------------------
 .idea*
 Assets/Plugins/JetBrains*
 
@@ -63,29 +67,3 @@ ehthumbs.db
 #-- Python
 #-----------------------
 __pycache__
-
-#-----------------------------------------
-#-- Builds
-#-----------------------------------------
-Builds/
-
-#-----------------------------------------
-#-- Scripts (results, temp, etc.)
-#-----------------------------------------
-Scripts/TestResults/
-
-#-----------------------------------------
-#-- Untracked Plugins
-#-----------------------------------------
-Assets/Plugins/Untracked
-Assets/Plugins/Untracked.meta
-
-#-----------------------------------------
-#-- Builds
-#-----------------------------------------
-Builds/
-
-#-----------------------------------------
-#-- Keystore
-#-----------------------------------------
-Keystore/
