--- a/Assets/VoxelPainter/VoxelPainter.asmdef
+++ b/Assets/VoxelPainter/VoxelPainter.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "VoxelPainter"
+    "name": "VoxelPainter",
+    "rootNamespace": "",
+    "references": [
+        "Foxworks"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
