User can now paint colors in real time

--- a/Assets/VoxelPainter/VoxelPainter.asmdef
+++ b/Assets/VoxelPainter/VoxelPainter.asmdef
@@ -5,7 +5,9 @@
         "Foxworks",
         "Cinemachine",
         "NaughtyAttributes.Core",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "AYellowpaper.SerializedCollections",
+        "ColorPicker"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
