--- a/Assets/VoxelPainter/VoxelPainter.asmdef
+++ b/Assets/VoxelPainter/VoxelPainter.asmdef
@@ -7,7 +7,8 @@
         "NaughtyAttributes.Core",
         "Unity.TextMeshPro",
         "AYellowpaper.SerializedCollections",
-        "ColorPicker"
+        "ColorPicker",
+        "StandaloneFileBrowser"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
